<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_random_description">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_wolox_phone">0800 123 4567</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="view_pager_title">Username: %1$s\nFavourite color: %2$s</string>
    <string name="random_toolbar_title">Random number example</string>
    <string name="request_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_favourite_color">Your favourite color</string>
    <string name="fragment_example_login">Login</string>
    <string name="fragment_request_search">Search</string>
    <string name="fragment_request_post_id">Post id</string>
    <string name="fragment_request_invalid_input">Invalid input, please enter a valid id.</string>
    <string name="login_button">LOG IN</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="terms_and_conditions_text_view">By joining you agree to our <u>Terms &amp; Conditions</u></string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="blank_error">Complete all fields</string>
    <string name="invalid_format_error">Invalid e-mail format</string>
    <string name="empty_field_error">All fields are required.</string>
    <string name="invalid_email_error">Invalid e-mail format.</string>
    <string name="home_sample_text">Home Activity</string>
    <string name="sign_up_sample_text">Sign Up Screen</string>
    <string name="connection_call_error">Connection error. Please try again.</string>
    <string name="authentication_credential_error">Wrong email or password.</string>
    <string name="wolox">Wolox</string>
    <string name="news_tab_text">NEWS</string>
    <string name="profile_tab_text">PROFILE</string>
    <string name="title_placeholder">Title</string>
    <string name="description_placeholder">Description</string>
    <string name="time_placeholder">15m</string>
    <string name="image_description">Image Description</string>
    <string name="news_server_error">Server is not responding.</string>
    <string name="post">Post</string>
    <string name="like_update_failed">The new couldn\'t be liked/unliked</string>

</resources>