<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/wolox_huge_spacing">


    <ImageView
        android:id="@+id/newsImageView"
        android:layout_width="@dimen/wolox_medium_spacing"
        android:layout_height="@dimen/wolox_medium_spacing"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wolox_cover_gradient" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wolox_big_margin_spacing"
        android:layout_marginTop="@dimen/wolox_tiny_spacing"
        android:text="@string/title_placeholder"
        android:textColor="@color/colorWoloxDarkGrey"
        android:textSize="@dimen/font_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/wolox_big_margin_spacing"
        android:layout_marginEnd="@dimen/wolox_medium_spacing"
        android:layout_marginBottom="@dimen/spacing_large"
        android:text="@string/description_placeholder"
        android:textColor="@color/colorWoloxLightGrey"
        android:textSize="@dimen/font_medium"
        android:ellipsize="end"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/likeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/wolox_tiny_spacing"
        android:layout_marginEnd="@dimen/spacing_large"
        android:text="@string/time_placeholder"
        android:textColor="@color/colorWoloxLightGrey"
        android:textSize="@dimen/font_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:button="@drawable/like_button_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>